[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity = { workspace = true }
async-std = { workspace = true }
sea-orm-migration = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }

